--- a/test.html
+++ b/test.html
@@ -11,12 +11,15 @@
 </head>
 <body>
 
-<div class="navbar" id="sitehead" role="navigation" aria-label="main navigation">
-  <div class="container">
-    <div class="navbar-brand col-sm">
-      <a href="#" alt="Tim Rodgers | Front-End Developer with Divine Connections Media"><i class="fas fa-plug" id="logo"></i></a>
+<div class="navbar navbar-fixed-top" id="sitehead" role="navigation" aria-label="main navigation">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-burger" role="button" aria-label="menu" aria-expanded="false" data-target="#navMenu"><span aria-hidden="true"></span><span aria-hidden="true"></span><span aria-hidden="true"></span></a>                       
+      <div class="navbar-brand col-sm">
+        <a href="#" alt="Tim Rodgers | Front-End Developer with Divine Connections Media"><i class="fas fa-plug" id="logo"></i></a>
+      </div>
     </div>
-    <a class="navbar-burger" role="button" aria-label="menu" aria-expanded="false" data-target="#navMenu"><span aria-hidden="true"></span><span aria-hidden="true"></span><span aria-hidden="true"></span></a>
+
     
     <div class="navbar-menu" id="navMenu">
       <div class="navbar-start">
