added some js to make it scroll but menu doesn't show up...

--- a/test.html
+++ b/test.html
@@ -14,27 +14,29 @@
 <div class="navbar navbar-fixed-top" id="sitehead" role="navigation" aria-label="main navigation">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-burger" role="button" aria-label="menu" aria-expanded="false" data-target="#navMenu"><span aria-hidden="true"></span><span aria-hidden="true"></span><span aria-hidden="true"></span></a>                       
+      <a class="navbar-burger navbar-toggle" role="button" data-toggle="collapse" data-target="#navMenu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </a>                       
       <div class="navbar-brand col-sm">
         <a href="#" alt="Tim Rodgers | Front-End Developer with Divine Connections Media"><i class="fas fa-plug" id="logo"></i></a>
       </div>
     </div>
-
     
-    <div class="navbar-menu" id="navMenu">
-      <div class="navbar-start">
-        <!--
-        <div id="brand-wrap">
-          <div id="brand">divine connections media</div>
-        </div>
-        -->
-      </div>
-      <div class="navbar-end">
-        <a class="navbar-item" href="#work">Work</a>
-        <a class="navbar-item" href="#about">About</a>
-        <div class="navbar-item">
-          <a href="#contact" class="contact-button" id="contact-button">Contact</a>
-        </div>
+    <div>
+      <div class="collapse navbar-collapse" id="navMenu">
+        <ul class="nav navbar-nav">
+          <li>
+            <a class="navbar-item" href="#work">Work</a>
+          </li>
+          <li>
+            <a class="navbar-item" href="#about">About</a>
+          </li>
+          <li class="navbar-item">
+            <a href="#contact" class="contact-button" id="contact-button">Contact</a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
