well, I added a top ID to the body tag and thought I fixed the burger menu but its still messed up ugh

--- a/test.html
+++ b/test.html
@@ -9,30 +9,25 @@
   <title>Tim Rodgers-Web Developer</title>
   <script src="https://kit.fontawesome.com/cf1fb4309f.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body id="top">
 
-<div class="navbar navbar-fixed-top" id="sitehead" role="navigation" aria-label="main navigation">
+<nav class="navbar navbar-fixed-top" id="sitehead" role="navigation" aria-label="main navigation">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-burger navbar-toggle" role="button" data-toggle="collapse" data-target="#navMenu">
-        <span></span>
-        <span></span>
-        <span></span>
-      </a>                       
-      <div class="navbar-brand col-sm">
-        <a href="#" alt="Tim Rodgers | Front-End Developer with Divine Connections Media"><i class="fas fa-plug" id="logo"></i></a>
-      </div>
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navMenu">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>                       
+      <a href="#top" class="navbar-brand" alt="Tim Rodgers | Front-End Developer with Divine Connections Media">
+        <i class="fas fa-plug" id="logo"></i>
+      </a>
     </div>
-    
     <div>
       <div class="collapse navbar-collapse" id="navMenu">
         <ul class="nav navbar-nav">
-          <li>
-            <a class="navbar-item" href="#work">Work</a>
-          </li>
-          <li>
-            <a class="navbar-item" href="#about">About</a>
-          </li>
+          <li><a class="navbar-item" href="#work">Work</a></li>
+          <li><a class="navbar-item" href="#about">About</a></li>
           <li class="navbar-item">
             <a href="#contact" class="contact-button" id="contact-button">Contact</a>
           </li>
@@ -40,7 +35,7 @@
       </div>
     </div>
   </div>
-</div>
+</nav>
 
 
 <div class="container">
