--- a/test.html
+++ b/test.html
@@ -3,80 +3,76 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="https://kit.fontawesome.com/cf1fb4309f.js" crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="https://raw.githubusercontent.com/timbocf/portfolio/master/images/divine-connections-icon.svg" type="image/svg" sizes="16x16">
   <title>Tim Rodgers-Web Developer</title>
-  <script src="https://kit.fontawesome.com/cf1fb4309f.js" crossorigin="anonymous"></script>
 </head>
-<body id="top">
-
-<nav class="navbar navbar-fixed-top" id="sitehead" role="navigation" aria-label="main navigation">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navMenu">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>                       
-      <a href="#top" class="navbar-brand" alt="Tim Rodgers | Front-End Developer with Divine Connections Media">
-        <i class="fas fa-plug" id="logo"></i>
-      </a>
-    </div>
-    <div>
-      <div class="collapse navbar-collapse" id="navMenu">
-        <ul class="nav navbar-nav">
-          <li><a class="navbar-item" href="#work">Work</a></li>
-          <li><a class="navbar-item" href="#about">About</a></li>
-          <li class="navbar-item">
-            <a href="#contact" class="contact-button" id="contact-button">Contact</a>
-          </li>
-        </ul>
+<body>
+  <nav class="navbar navbar-fixed-top" id="sitehead">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navMenu">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>                       
+        <a href="#top" class="navbar-brand" alt="Tim Rodgers | Front-End Developer with Divine Connections Media">
+          <i class="fas fa-plug" id="logo"></i>
+        </a>
+      </div>
+      <div>
+        <div class="collapse navbar-collapse" id="navMenu">
+          <ul class="nav navbar-nav">
+            <li><a href="#work">Work</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact" class="contact-button" id="contact-button">Contact</a></li>
+          </ul>
+        </div>
       </div>
     </div>
+  </nav>
+
+
+  <div class="container">
+    <div id="work">
+        <div id="slider-wrap">
+            <div id="slider">
+                <button id="leftbtn" class="btn">&#60;</button>
+                <button id="rightbtn" class="btn">&#62;</button>
+            </div>
+        </div>
+    </div>
   </div>
-</nav>
 
-
-<div class="container">
-  <div id="work">
-      <div id="slider-wrap">
-          <div id="slider">
-              <button id="leftbtn" class="btn">&#60;</button>
-              <button id="rightbtn" class="btn">&#62;</button>
-          </div>
+  <div id="about">
+      <div class="container">
+          <h1>Hi,</h1>
+          <h3>I'm Tim Rodgers</h3>
+          <p>I create things out of code.  I have worked directly with clients to enhance their web presence and provide advertising solutions for their businesses. From models and bands to real estate agents and world-class HR software companies, I meet challenges head-on. From responsive, user-friendly  WordPress custom templates to simple 5-page sites for churches, I provide what businesses need to succeed in today's competitive marketplace. If I don't know it, I'll learn it!</p>
       </div>
   </div>
-</div>
 
-<div id="about">
-    <div class="container">
-        <h1>Hi,</h1>
-        <h3>I'm Tim Rodgers</h3>
-        <p>I create things out of code.  I have worked directly with clients to enhance their web presence and provide advertising solutions for their businesses. From models and bands to real estate agents and world-class HR software companies, I meet challenges head-on. From responsive, user-friendly  WordPress custom templates to simple 5-page sites for churches, I provide what businesses need to succeed in today's competitive marketplace. If I don't know it, I'll learn it!</p>
-    </div>
-</div>
-
-<div id="contact">
-    <div class="container">
-        <h1>Feel free to contact me.</h1>
-        <h3>Tim Rodgers</h3>
-        <h3>
-            <a href="mailto: timbocf@gmail.com">timbocf@gmail.com</a>
-        </h3>
-        <h3>
-            <a href="tel: 903-237-8475">903-237-8475</a>
-        </h3>
-    </div>
-</div>
+  <div id="contact">
+      <div class="container">
+          <h1>Feel free to contact me.</h1>
+          <h3>Tim Rodgers</h3>
+          <h3>
+              <a href="mailto: timbocf@gmail.com">timbocf@gmail.com</a>
+          </h3>
+          <h3>
+              <a href="tel: 903-237-8475">903-237-8475</a>
+          </h3>
+      </div>
+  </div>
 
 
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
-
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 <script src="js/script.js"></script>
-
 </body>
 </html>
