--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <nav class="navbar navbar-fixed-top" id="sitehead">
-    <div class="container">
+    <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navMenu">
           <span class="icon-bar"></span>
@@ -39,7 +39,7 @@
   </nav>
 
 
-  <div class="container">
+  <div class="container-fluid">
     <div id="work">
         <div id="slider-wrap">
             <div id="slider">
@@ -51,7 +51,7 @@
   </div>
 
   <div id="about">
-      <div class="container">
+      <div class="container-fluid">
           <h1>Hi,</h1>
           <h3>I'm Tim Rodgers</h3>
           <p>I create things out of code.  I have worked directly with clients to enhance their web presence and provide advertising solutions for their businesses. From models and bands to real estate agents and world-class HR software companies, I meet challenges head-on. From responsive, user-friendly  WordPress custom templates to simple 5-page sites for churches, I provide what businesses need to succeed in today's competitive marketplace. If I don't know it, I'll learn it!</p>
@@ -59,7 +59,7 @@
   </div>
 
   <div id="contact">
-      <div class="container">
+      <div class="container-fluid">
           <h1>Feel free to contact me.</h1>
           <h3>Tim Rodgers</h3>
           <h3>
