--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
 <body>
   <nav class="navbar navbar-fixed-top" id="sitehead">
     <div class="container-fluid">
-      <div class="navbar-header">
+      <div class="navbar-header col-sm-4 has-border">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navMenu">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -26,12 +26,13 @@
           <i class="fas fa-plug" id="logo"></i>
         </a>
       </div>
-      <div>
+      <div class="col-sm-8 has-border"></div>
+      <div class="col-sm-4 has-border">
         <div class="collapse navbar-collapse" id="navMenu">
-          <ul class="nav navbar-nav">
-            <li><a href="#work">Work</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact" class="contact-button" id="contact-button">Contact</a></li>
+          <ul class="nav navbar-nav navbar-end">
+            <li><a class="navbar-item" href="#work">Work</a></li>
+            <li><a class="navbar-item" href="#about">About</a></li>
+            <li><a href="#contact" class="contact-button navbar-item" id="contact-button">Contact</a></li>
           </ul>
         </div>
       </div>
