--- a/test.html
+++ b/test.html
@@ -14,26 +14,29 @@
   <title>Tim Rodgers-Web Developer</title>
 </head>
 <body>
+
   <nav class="navbar navbar-fixed-top" id="sitehead">
-    <div class="container-fluid">
-      <div class="navbar-header col-sm-4 has-border">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navMenu">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>                       
-        <a href="#top" class="navbar-brand" alt="Tim Rodgers | Front-End Developer with Divine Connections Media">
-          <i class="fas fa-plug" id="logo"></i>
-        </a>
-      </div>
-      <div class="col-sm-8 has-border"></div>
-      <div class="col-sm-4 has-border">
-        <div class="collapse navbar-collapse" id="navMenu">
-          <ul class="nav navbar-nav navbar-end">
-            <li><a class="navbar-item" href="#work">Work</a></li>
-            <li><a class="navbar-item" href="#about">About</a></li>
-            <li><a href="#contact" class="contact-button navbar-item" id="contact-button">Contact</a></li>
-          </ul>
+    <div class="container">
+      <div class="row">
+        <div class="navbar-header col-lg-4 has-border" style="border: 1px solid #ddd">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navMenu">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>                       
+          <a href="#top" class="navbar-brand" alt="Tim Rodgers | Front-End Developer with Divine Connections Media">
+            <i class="fas fa-plug" id="logo"></i>
+          </a>
+        </div>
+        <div class="col-lg-4 has-border"></div>
+        <div class="col-lg-4 has-border">
+          <div class="collapse navbar-collapse" id="navMenu">
+            <ul class="nav navbar-nav navbar-end">
+              <li><a class="navbar-item" href="#work">Work</a></li>
+              <li><a class="navbar-item" href="#about">About</a></li>
+              <li><a href="#contact" class="contact-button navbar-item" id="contact-button">Contact</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
@@ -48,6 +51,13 @@
                 <button id="rightbtn" class="btn">&#62;</button>
             </div>
         </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 has-border">Hello</div>
+      <div class="col-lg-6 has-border">World.</div>
     </div>
   </div>
 
