--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Your content goes here -->
-
+<h1>Tim Rodgers</h1>
     <!-- Bootstrap JS Bundle (with Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
